@@ -1,3 +1,5 @@
+* Manage mono process batches
+
 Version 1.6 - 2015-12-23
 * Add pyson filtering for actions on event type
 * Add list of actions on event type
